--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"just-debounce-it": "3.2.0",
 		"prop-types": "15.8.1",
 		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+    "intersection-observer": "0.10.0"
 	},
 	"devDependencies": {
 		"@types/react": "18.0.28",
